fixed the responsivness of the home page (too much padding issue), added home page logo

--- a/pokemon-client/src/styles/homeStyle.css
+++ b/pokemon-client/src/styles/homeStyle.css
@@ -7,9 +7,10 @@ body {
 }
 
 .home-view {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 100px;
 }
